# TinySHM

./: 404.html  LICENSE  Ops.sh  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  preview.bat  preview.sh  sitemap.xml  upload.sh  win-upload.bat
ABOUT/about/: index.html
ADAPTATION/adaptation/: index.html
ADAPTATION/code/: index.html
ADAPTATION/log/: index.html
ADAPTATION/notes/: index.html
AI/ai/: index.html
ARCHITECTURE/architecture/: index.html
CODE/DNESP32S3M-BASE-backup-2025-04-23/: sdkconfig
CODE/DNESP32S3M-BASE-backup-2025-04-23/main/: main.cpp
CODE/DNESP32S3M-BASE/main/: CMakeLists.txt  main.cpp
CODE/DNESP32S3M-CPP-LATEST/main/: main.cpp
CODE/DNESP32S3M-LATEST-CPP/main/: main.cpp
CODE/DNESP32S3M-TESTBED/: CMakeLists.txt
DAMAGE_DETECTION/damage_detection/: index.html
DEMO/DNESP32S3M-DEMO/: sdkconfig
DEVKITS/devkits/: index.html
DOC/: mkdocs.yml
DOC/docs/: index.en.md  index.zh.md
DOC/site/: 404.html  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
DSP/dsp/: index.html
FILE/: MCU_NODE.pptx
MATH/math/: index.html
MEASUREMENT/code/: index.html
MEASUREMENT/log/: index.html
MEASUREMENT/measurement/: index.html
MEASUREMENT/notes/: index.html
RELEASES/releases/: index.html
SYSTEM_IDENTIFICATION/system_identification/: index.html
TOOLBOX/code/: index.html
TOOLBOX/log/: index.html
TOOLBOX/notes/: index.html
TOOLBOX/toolbox/: index.html
blog/: index.html
search/: search_index.json
zh/: index.html
zh/blog/: index.html
(+496 files in other folders)
